style.css
/* ... */
@media screen and (min-width:361px) and (max-width: 480px){
    #wrapper{
        flex: 4;
        min-height: 100%;
        margin-top: 15px;
    }
    #charts{
        display: block;
        justify-content: space-between;
        padding: 10px;
        height: 60%;
    }
    #page{
        min-height: 100%;
        display: block;
        padding-bottom: 15px;
    }
    #forecast-wrapper{
        width: 100%;
        height: 40%;
        padding: 0 10px;
        margin-top: 5px;
        overflow: auto;
    }
    #forecast-wrapper > p{
        padding: 5px 0 0 5px;
        margin-top: 10px;
        font-size: large;
        background: #00000083;
        border-radius: 3px;
        -webkit-border-radius: 3px;
        -moz-border-radius: 3px;
        -ms-border-radius: 3px;
        -o-border-radius: 3px;
    }
    #carousel{
        position: relative;
        display: flex;
        width: 100%;
        min-height: 200px;
        margin-top: 5px;
        border-radius: 5px;
        -webkit-border-radius: 5px;
        -moz-border-radius: 5px;
        -ms-border-radius: 5px;
        -o-border-radius: 5px;
    }
    #prev{
        position: absolute;
        top: calc(50% - (34px/2));
        left: .5%;
    }
    #next{
        position: absolute;
        top: calc(50% - (34px/2));
        right: .5%;
    }
    #line{
        width: 100%;
        backdrop-filter: blur(5px);
        background: #00000054;
        border-radius: 5px;
        -webkit-border-radius: 5px;
        -moz-border-radius: 5px;
        -ms-border-radius: 5px;
        -o-border-radius: 5px;
        box-shadow: 1px 3px 10px rgb(41, 41, 41);
    }
    #bar{
        width: 100%;
        backdrop-filter: blur(5px);
        background: #00000054;
        border-radius: 5px;
        margin-top: 15px;
        -webkit-border-radius: 5px;
        -moz-border-radius: 5px;
        -ms-border-radius: 5px;
        -o-border-radius: 5px;
        box-shadow: 1px 3px 10px rgb(41, 41, 41);
    }
    #forecast::-webkit-scrollbar {
        display: none;
    }
    #forecast{
        min-height: 200px;
        width: 100%;
        display: flex;
        overflow: auto;
        border-radius: 5px;
        -webkit-border-radius: 5px;
        -moz-border-radius: 5px;
        -ms-border-radius: 5px;
        -o-border-radius: 5px;
    }
    #carousel button {
        background-color: rgba(88, 88, 88, 0.308);
        border: none;
        visibility: hidden;
        color: white;
        font-size: 24px;
        padding: 10px 16px;
        border-radius: 8px;
        cursor: pointer;
        backdrop-filter: blur(10px);
        transition: all 0.3s ease;
        display: flex;
        align-items: center;
        justify-content: center;
    }
    #search{
        position: relative;
    }
    #clear{
        position: absolute;
        right: 21%;
        background-color: transparent;
        cursor: pointer;
        visibility: hidden;
    }
    #search > input{
        height: 40px;
        width: 260px;
        border: none;
        border-radius: 5px;
        -webkit-border-radius: 5px;
        -moz-border-radius: 5px;
        -ms-border-radius: 5px;
        -o-border-radius: 5px;
        padding: 0 0px 0 04px;
    }
    #search > input:focus{
        outline: none;
    }
    #search > button{
        height: 40px;
        border: none;
        padding: 0 4px 0 4px;
        border-radius: 5px;
        -webkit-border-radius: 5px;
        -moz-border-radius: 5px;
        -ms-border-radius: 5px;
        -o-border-radius: 5px;
    }
}
/* ... */

